Update to 1.21.4. Add Folia and MiniPlaceholders Support.